--- a/Landing Page.html
+++ b/Landing Page.html
@@ -16,15 +16,15 @@
         </div>
         <div class="beneficios">
             <div class="beneficio-item">
-                <img src="gestion-finanzas.png" alt="Gestión de finanzas" class="imagen-beneficio">
+                <img src="/img/gestion-finanzas.png" alt="Gestión de finanzas" class="imagen-beneficio">
                 <p>Aprende a gestionar tus finanzas de forma eficiente.</p>
             </div>
             <div class="beneficio-item">
-                <img src="alcanzar-metas.png" alt="Alcanzar metas" class="imagen-beneficio">
+                <img src="/img/alcanzar-metas.png" alt="Alcanzar metas" class="imagen-beneficio">
                 <p>Descubre estrategias para alcanzar tus metas financieras.</p>
             </div>
             <div class="beneficio-item">
-                <img src="aumentar-ingresos.png" alt="Aumentar ingresos" class="imagen-beneficio">
+                <img src="/img/aumentar-ingresos.png" alt="Aumentar ingresos" class="imagen-beneficio">
                 <p>Obtén consejos prácticos para aumentar tus ingresos.</p>
             </div>
         </div>
