--- a/Landing Page.html
+++ b/Landing Page.html
@@ -5,56 +5,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caroline Sada - Toma el control de tus finanzas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
-    <section class="contenido">
-        <div class="encabezado">
-            <p class="titulo">¡Toma el control de tus finanzas!</p>
-            <p class="subtitulo">Aprende estrategias financieras para impulsar tu emprendimiento</p>
-        </div>
-        <div class="beneficios">
-            <div class="beneficio-item">
-                <img src="/img/gestion-finanzas.png" alt="Gestión de finanzas" class="imagen-beneficio">
-                <p>Aprende a gestionar tus finanzas de forma eficiente.</p>
+    <div class="container-fluid p-0">
+        <div class="row m-0">
+            <div class="col-sm-12 col-md-7 col-lg-7	col-xl-7 col-xxl-8 p-0">
+                <div class="min-vh-100 d-flex flex-column justify-content-between">
+                    <div class="text-center m-3 mb-0">
+                        <h2>¡Toma el control de tus finanzas!</h2>
+                        <p class="mt-3">Aprende estrategias financieras para impulsar tu emprendimiento</p>
+                    </div>
+                    <div class="text-center">
+                        <div class="d-flex flex-wrap justify-content-center m-1">
+                            <div class="beneficio-max-width">
+                                <img src="/img/gestion-finanzas.png" alt="Gestión de finanzas" class="beneficio-img">
+                                <p>Aprende a gestionar tus finanzas de forma eficiente.</p>
+                            </div>
+                            <div class="beneficio-max-width">
+                                <img src="/img/alcanzar-metas.png" alt="Alcanzar metas" class="beneficio-img">
+                                <p>Descubre estrategias para alcanzar tus metas financieras.</p>
+                            </div>
+                            <div class="beneficio-max-width">
+                                <img src="/img/aumentar-ingresos.png" alt="Aumentar ingresos" class="beneficio-img">
+                                <p>Obtén consejos prácticos para aumentar tus ingresos.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="m-5 mt-0">
+                        <div class="d-flex justify-content-center">
+                            <form id="form-subscribe">
+                                <div>
+                                    <label for="subscribe" class="form-label fw-bold d-block">Inscríbete a mi curso online</label>
+                                    <div class="input-group mb-3">
+                                        <input id="subscribe" type="text" class="form-control input-subscribe"
+                                            placeholder="Ingresa tu correo electrónico"
+                                            aria-label="Ingresa tu correo electrónico"
+                                            aria-describedby="button-subscribe">
+                                        <button class="btn btn-warning button-subscribe" type="button" id="button-subscribe">¡Quiero
+                                            inscribirme!</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="beneficio-item">
-                <img src="/img/alcanzar-metas.png" alt="Alcanzar metas" class="imagen-beneficio">
-                <p>Descubre estrategias para alcanzar tus metas financieras.</p>
-            </div>
-            <div class="beneficio-item">
-                <img src="/img/aumentar-ingresos.png" alt="Aumentar ingresos" class="imagen-beneficio">
-                <p>Obtén consejos prácticos para aumentar tus ingresos.</p>
-            </div>
-        </div>
-        <div class="llamada-accion">
-            <div>
-                <p>Inscríbete a mi curso online</p>
-                <div>
-                    <input type="text" placeholder="Ingresa tu correo electrónico">
-                    <button>¡Quiero inscribirme!</button>
+            <div class="col-sm-12 col-md-5 col-lg-5	col-xl-5 col-xxl-4 p-0">
+                <div class="img-presentacion min-vh-100  position-relative">
+                    <div class="position-absolute bottom-0">
+                        <div class="bg-white-opacity">
+                            <p class="p-4 pb-0">
+                                Soy Caroline Sada licenciada en Administración y Dirección de Empresas, influencer y
+                                experta en ayudar a emprendedores como tú a alcanzar el éxito financiero.
+                            </p>
+                            <div class="d-flex justify-content-end">
+                                <!-- Facebook, Twitter , instagram -->
+                                <a class="pb-4 mx-1" href="https://www.facebook.com/" target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
+                                    </svg>
+                                </a>
+                                <a class="pb-4 mx-1" href="https://www.tiktok.com/" target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z" />
+                                    </svg>
+                                </a>
+                                <a class="pb-4 mx-2" href="https://www.instagram.com/" target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <section class="presentacion">
-        <div class="fondo-opaco">
-            <p>Soy Caroline Sada licenciada en Administración y Dirección de Empresas, influencer y experta en ayudar a
-                emprendedores como tú a alcanzar el éxito financiero.</p>
-            <div class="redes-sociales">
-                <!-- Facebook, Twitter , instagram -->
-                <a href="https://www.facebook.com/" target="_blank">                    
-                    <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-                </a>
-                <a href="https://www.tiktok.com/" target="_blank">
-                    <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/></svg>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank">
-                    <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
-                </a>
-            </div>
-        </div>
-    </section>
+    </div>
 </body>
+
 </html>
