--- a/LandingPage.html
+++ b/LandingPage.html
@@ -7,50 +7,50 @@
     <title>Caroline Sada - Toma el control de tus finanzas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <div class="container-fluid p-0">
         <div class="row m-0">
-            <div class="col-sm-12 col-md-7 col-lg-7	col-xl-7 col-xxl-8 p-0">
-                <div class="min-vh-100 d-flex flex-column justify-content-between">
-                    <div class="text-center m-3 mb-0">
-                        <h2>¡Toma el control de tus finanzas!</h2>
-                        <p class="mt-3">Aprende estrategias financieras para impulsar tu emprendimiento</p>
-                    </div>
-                    <div class="text-center">
-                        <div class="d-flex flex-wrap justify-content-center m-1">
-                            <div class="beneficio-max-width">
-                                <img src="/img/gestion-finanzas.png" alt="Gestión de finanzas" class="beneficio-img">
-                                <p>Aprende a gestionar tus finanzas de forma eficiente.</p>
-                            </div>
-                            <div class="beneficio-max-width">
-                                <img src="/img/alcanzar-metas.png" alt="Alcanzar metas" class="beneficio-img">
-                                <p>Descubre estrategias para alcanzar tus metas financieras.</p>
-                            </div>
-                            <div class="beneficio-max-width">
-                                <img src="/img/aumentar-ingresos.png" alt="Aumentar ingresos" class="beneficio-img">
-                                <p>Obtén consejos prácticos para aumentar tus ingresos.</p>
-                            </div>
+            <div
+                class="col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-8 p-0 min-vh-100 d-flex flex-column justify-content-between">
+                <div class="text-center m-3 mb-0">
+                    <h2>¡Toma el control de tus finanzas!</h2>
+                    <p class="mt-3">Aprende estrategias financieras para impulsar tu emprendimiento</p>
+                </div>
+                <div class="text-center">
+                    <div class="d-flex flex-wrap justify-content-center m-1">
+                        <div class="beneficio-max-width">
+                            <img src="./img/gestion-finanzas.png" alt="Gestión de finanzas" class="beneficio-img">
+                            <p>Aprende a gestionar tus finanzas de forma eficiente.</p>
+                        </div>
+                        <div class="beneficio-max-width">
+                            <img src="./img/alcanzar-metas.png" alt="Alcanzar metas" class="beneficio-img">
+                            <p>Descubre estrategias para alcanzar tus metas financieras.</p>
+                        </div>
+                        <div class="beneficio-max-width">
+                            <img src="./img/aumentar-ingresos.png" alt="Aumentar ingresos" class="beneficio-img">
+                            <p>Obtén consejos prácticos para aumentar tus ingresos.</p>
                         </div>
                     </div>
-                    <div class="m-5 mt-0">
-                        <div class="d-flex justify-content-center">
-                            <form id="form-subscribe">
-                                <div>
-                                    <label for="subscribe" class="form-label fw-bold d-block">Inscríbete a mi curso online</label>
-                                    <div class="input-group mb-3">
-                                        <input id="subscribe" type="text" class="form-control input-subscribe"
-                                            placeholder="Ingresa tu correo electrónico"
-                                            aria-label="Ingresa tu correo electrónico"
-                                            aria-describedby="button-subscribe">
-                                        <button class="btn btn-warning button-subscribe" type="button" id="button-subscribe">¡Quiero
-                                            inscribirme!</button>
-                                    </div>
+                </div>
+                <div class="m-5 mt-0">
+                    <div class="d-flex justify-content-center">
+                        <form id="form-subscribe">
+                            <div>
+                                <label for="subscribe" class="form-label fw-bold d-block">Inscríbete a mi curso
+                                    online</label>
+                                <div class="input-group mb-3">
+                                    <input id="subscribe" type="text" class="form-control input-subscribe"
+                                        placeholder="Ingresa tu correo electrónico"
+                                        aria-label="Ingresa tu correo electrónico" aria-describedby="button-subscribe">
+                                    <button class="btn btn-warning button-subscribe" type="button"
+                                        id="button-subscribe">¡Quiero
+                                        inscribirme!</button>
                                 </div>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
