Update meta description and optimize the landing page

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Caroline Sada | Descubre cómo gestionar tus finanzas | Alcanza tus meta financieras | Aumenta tus ingresos">
     <title>Caroline Sada - Toma el control de tus finanzas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" media="screen" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -64,21 +64,21 @@
                             </p>
                             <div class="d-flex justify-content-end">
                                 <!-- Facebook, Twitter , instagram -->
-                                <a class="pb-4 mx-1" href="https://www.facebook.com/" target="_blank">
+                                <a class="pb-4 mx-1" href="https://www.facebook.com/" target="_blank" aria-label="Visita muestra página de Facebook">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
                                             d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
                                     </svg>
                                 </a>
-                                <a class="pb-4 mx-1" href="https://www.tiktok.com/" target="_blank">
+                                <a class="pb-4 mx-1" href="https://www.tiktok.com/" target="_blank" aria-label="Visita nuestra página de TikTok">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
                                             d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z" />
                                     </svg>
                                 </a>
-                                <a class="pb-4 mx-2" href="https://www.instagram.com/" target="_blank">
+                                <a class="pb-4 mx-2" href="https://www.instagram.com/" target="_blank"  aria-label="Visita nuestra página de Instagram">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
