Update images to svg format

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -22,15 +22,15 @@
                 <div class="text-center">
                     <div class="d-flex flex-wrap justify-content-center m-1">
                         <div class="beneficio-max-width">
-                            <img src="./img/gestion-finanzas.png" alt="Gestión de finanzas" class="beneficio-img">
+                            <img src="./img/gestion-finanzas.svg" alt="Gestión de finanzas" class="beneficio-img">
                             <p>Aprende a gestionar tus finanzas de forma eficiente.</p>
                         </div>
                         <div class="beneficio-max-width">
-                            <img src="./img/alcanzar-metas.png" alt="Alcanzar metas" class="beneficio-img">
+                            <img src="./img/alcanzar-metas.svg" alt="Alcanzar metas" class="beneficio-img">
                             <p>Descubre estrategias para alcanzar tus metas financieras.</p>
                         </div>
                         <div class="beneficio-max-width">
-                            <img src="./img/aumentar-ingresos.png" alt="Aumentar ingresos" class="beneficio-img">
+                            <img src="./img/aumentar-ingresos.svg" alt="Aumentar ingresos" class="beneficio-img">
                             <p>Obtén consejos prácticos para aumentar tus ingresos.</p>
                         </div>
                     </div>
